[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
[theme]
base="light"
dependencies = [
    "folium>=0.20.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "selenium>=4.35.0",
    "streamlit-folium>=0.25.1",
    "streamlit>=1.48.1",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.5",
    "praw>=7.8.1",
    "yfinance>=0.2.65",
    "textblob>=0.19.0",
    "joblib>=1.5.1",
    "reportlab>=4.0.0",
]
